_config, _project updates
1. social integration updated - readwise

2. Project thumbnail updated

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
+readwise_name: bzejia
 
 contact_note: >
   Feel free to reach me via email or Linkedin
