--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ contact_note: >
   Feel free to reach me via email or Linkedin
 
 google_analytics:  UA-240685579-1
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification:  fBTYH_5zaYoNS1OzpSOB2ZJwAsx5dQWS9lE_5PX7ezg
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
