--- a/_config.yml
+++ b/_config.yml
@@ -197,6 +197,9 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
+display_tags: ['Italian-neorealism', 'Japanese-cinema', 'new-wave'] # this tags will be dispalyed on the front page of your blog
+
+
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
 # -----------------------------------------------------------------------------
