update substack links

--- a/_config.yml
+++ b/_config.yml
@@ -101,8 +101,8 @@ pagination:
 # If you have blog posts published on medium.com or other exteranl sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
+  - name: substack.com
+    rss_url: https://zejiac99.substack.com/feed
 
 # -----------------------------------------------------------------------------
 # Collections
